# roguedb-open-source

./: .bazelrc  .gitignore  BSD-3-LICENSE-modified.md  BUILD  MODULE.bazel  README.md  compose.yml  generate_protos.sh  go.mod  go.sum  package.json  paket.dependencies  pnpm-lock.yaml
benchmarks/: README.md  common.cpp  common.h  coroutines.h  zipfian_generator.h
benchmarks/grpc/: grpc_benchmarks.cpp
benchmarks/ycsb_general_purpose/: cloud_benchmarks.cpp
blogs/: README.md
dockerfiles/: dockerfile.getting_started
getting_started/: BUILD  README.md  complete_example.cpp  grpc.cpp  grpc.go  grpc.py  queries.proto  rest.cpp  rest.py  roguedb.proto  test.proto  user.proto
getting_started/grpc/: grpc.cpp  grpc.cs  grpc.go  grpc.java  grpc.js  grpc.py
getting_started/rest/: rest.cpp  rest.cs  rest.go  rest.java  rest.js  rest.py
google/: BUILD
google/api/: annotations.pb.cc  annotations.pb.h  annotations.proto  annotations_pb2.py  http.pb.cc  http.pb.h  http.proto  http_pb2.py
protos/: README.md  dummy.proto  experiment.proto
roguedb_driver/: README.md
