module(
    name = "rogue_roguedb_open_source",
    version = "1.0.0",
    compatibility_level = 0,
)

# Python Setup
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_dependencies",
    python_version = "3.11",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "python_dependencies")

# Go Setup
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.59.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_golang_jwt_jwt_v5", "org_golang_google_genproto_googleapis_api", "org_golang_google_grpc", "org_golang_google_protobuf")

# C++ Protocol Buffers, gRPC, and curl
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "protobuf", version = "30.0")

bazel_dep(name = "curl", version = "8.8.0.bcr.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.5")
bazel_dep(name = "boringssl", version = "0.20250212.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Required to override protobuf version specified as 29.1 in dependency graph
single_version_override(
    module_name = "protobuf",
    version = "30.0",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "cpr",
    build_file = "//third_party:cpr.BUILD",
    commit = "516cb3e5f4e38bede088f69fcf122c6089e38f00",
    remote = "https://github.com/libcpr/cpr.git",
    patches = ["//third_party:cpr.PATCH"]
)

git_repository(
    name = "jwt",
    build_file = "//third_party:jwt.BUILD",
    commit = "e71e0c2d584baff06925bbb3aad683f677e4d498",
    remote = "https://github.com/Thalhammer/jwt-cpp.git"
)
