module(
    name = "rogue_roguedb_open_source",
    version = "1.0.0",
    compatibility_level = 0,
)



# C# Setup
bazel_dep(name = "rules_proto_grpc_csharp", version = "5.8.0")
bazel_dep(name = "rules_dotnet", version = "0.21.5") # Use the latest version


dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "10.0.100")
use_repo(dotnet, "dotnet_toolchains")
register_toolchains("@dotnet_toolchains//:all")

main_extension = use_extension("//paket/deps:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")




# C++ Setup
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "protobuf", version = "30.0")

bazel_dep(name = "curl", version = "8.8.0.bcr.3")

# Required to override protobuf version specified as 29.1 in dependency graph
single_version_override(
    module_name = "protobuf",
    version = "30.0",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
git_repository(
    name = "cpr",
    build_file = "//third_party:cpr.BUILD",
    commit = "516cb3e5f4e38bede088f69fcf122c6089e38f00",
    remote = "https://github.com/libcpr/cpr.git",
    patches = ["//third_party:cpr.PATCH"]
)

git_repository(
    name = "jwt",
    build_file = "//third_party:jwt.BUILD",
    commit = "e71e0c2d584baff06925bbb3aad683f677e4d498",
    remote = "https://github.com/Thalhammer/jwt-cpp.git"
)

# Go Setup
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.59.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_golang_jwt_jwt_v5", "org_golang_google_genproto_googleapis_api", "org_golang_google_grpc", "org_golang_google_protobuf")

# Java Dependencies
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Format is "groupId:artifactId:version"
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "com.auth0:java-jwt:4.5.0",
    ],
)
use_repo(maven, "maven")
bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "googleapis", version = "0.0.0-20260109-6145b5ff")

# JavaScript Dependencies
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "rules_proto_grpc_js", version = "5.8.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "24.13.0")
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(name = "pnpm", pnpm_version = "9.0.0")
use_repo(pnpm, "pnpm")

# Python Setup
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_dependencies",
    python_version = "3.11",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "python_dependencies")
